# rLLM

./: .gitignore  CLAUDE.md  CUDA_PLAN.md  Cargo.toml  LICENSE  README.md  check_mxfp4.py  download_models.sh  plan.md
docs/: README.md  api-server.md  architecture-overview.md  authentication.md  comparison-rllm-vs-vllm.md  evaluation-multi-dispatch-pipeline.md  expert-streaming.md  fp8.md  framework-comparison.md  fused_dense_ffn.md  gpu-backend.md  inference-engine.md  integration-testing.md  kv-cache.md  model-layer.md  multi-gpu-moe.md  nvfp4.md  production-considerations.md  production-readiness-vs-vllm.md  production-readiness.md  prompt-caching.md  quantization.md  rvllm_optimizations.md  threat-model.md  tiled_prefill.md  tool-calling.md  turboquant.md  vision.md
scripts/: README.md  bench-turboquant.sh  benchmark.sh  download-models.sh  install-claude-code.sh  install-hf.sh  install-rust.sh  quantize-models.sh
src/: chat.rs  config.rs  engine.rs  kv_cache.rs  loader.rs  main.rs  model.rs  scheduler.rs  setup.rs  tokenizer.rs
src/api/: anthropic.rs  metrics.rs  mod.rs  multi_gpu.rs  openai.rs  single_gpu.rs  tls.rs  worker.rs
src/api/auth/: mod.rs  oidc.rs  static_api_key.rs
src/commands/: batch.rs  bench.rs  mod.rs  quantize.rs  run.rs  serve.rs
src/engine/: dispatch.rs  loader.rs  mod.rs  multi_gpu.rs  scheduler.rs
src/gpu/: mod.rs  multi_gpu.rs  parallel.rs
src/gpu/cpu/: mod.rs
src/gpu/cuda/: backend.rs  mod.rs  nccl.rs  tensor.rs
src/model/: chat.rs  config.rs  expert_stream.rs  forward.rs  grammar.rs  kv_cache.rs  loader.rs  mod.rs  primitives.rs  profile.rs  sampler.rs  standard.rs  thinking.rs  tokenizer.rs  tools.rs  turboquant.rs  vision.rs
tests/: README.md  bench.py  benchmark.py  coherence.py  conftest.py  models.py  quality.py  requirements.txt  run.sh  test_bench_regressions.py  test_concurrent.py  test_model_families.py
tests/gpu-integration/: bench.py  conftest.py  requirements.txt  run.sh  test_model_families.py
(+91 files in other folders)
