[package]
name = "rllm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
safetensors = "0.5"
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "fancy-regex"] }
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
objc = "0.2.4"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system"] }

[profile.release]
lto = "thin"
codegen-units = 1
